# seconddraftml

./: README.md  main.ipynb  main.py  pyproject.toml
src/seconddraftml/: __init__.py  eda.py  regression.py
