[project]
name = "seconddraftml"
version = "0.1.0"
description = "Do 50% of your machine learning modeling iterations in 10% of the time. Quickly and insightfully."
readme = "README.md"
authors = [
    { email = "soufianenidam7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
